Updated some files

--- a/w3school_tennis/my_tennis/members/templates/home.html
+++ b/w3school_tennis/my_tennis/members/templates/home.html
@@ -6,9 +6,9 @@
 
 {% block content %}
 
-<h1>Welcome to our Football Team!</h1>
-<h3>Members</h3>
-<p>Check out all our <a href="index/">members</a></p>
+<h1 class="home">Welcome to our Football Team!</h1>
+<h3 class="home">Members</h3>
+<p class="home">Check out all our <a href="index/">members</a></p>
 
 {% comment %} creating a variable inside html {% endcomment %}
 {% with  guess="Let's try something new"  %}
