--- a/w3school_tennis/my_tennis/members/templates/index.html
+++ b/w3school_tennis/my_tennis/members/templates/index.html
@@ -2,7 +2,7 @@
 members {% endblock %} {% block content %}
 <p>Go to <a href="/">homepage</a></p>
 
-<h1>These are the names of all our members:</h1>
+<h1 class="home">Members:</h1>
 <ol>
   {% for i in myMembers %}
   <li>
